k8s/redis-service.yaml
# -----------------------------------------------------------
# Service: Redis (ClusterIP)
# Expone Redis internamente dentro del cluster.
# Los servicios se conectan usando el nombre DNS
# "redis.restaurantes-oltp.svc.cluster.local"
# -----------------------------------------------------------
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: restaurantes-oltp
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: cache
    app.kubernetes.io/part-of: restaurantes-oltp
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: cache
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
