k8s/search-service.yaml
# -----------------------------------------------------------
# Service: Servicio de Busqueda (ClusterIP)
# Expone el microservicio de busqueda internamente.
# El Ingress Controller enruta las peticiones /search/*
# hacia este servicio.
# -----------------------------------------------------------
apiVersion: v1
kind: Service
metadata:
  name: search-service
  namespace: restaurantes-oltp
  labels:
    app.kubernetes.io/name: search-service
    app.kubernetes.io/component: busqueda
    app.kubernetes.io/part-of: restaurantes-oltp
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: search-service
    app.kubernetes.io/component: busqueda
  ports:
    - name: http
      port: 4000
      targetPort: 4000
      protocol: TCP
